added some preprocessing

--- a/b18074.md
+++ b/b18074.md
@@ -133,7 +133,7 @@ Maps are stored as graphs, or two dimensional arrays of objects with attributes 
 
 A map database represents a road network along with associated features. Map providers can choose various models of a road network as a basis to formulate a database. Commonly, such a model comprises basic elements (nodes, links and areas) of the road network and properties of those elements (location coordinates, shape, addresses, road class, speed range, etc.). The basic elements are referred to as features and the properties as attributes. Other information associated with the road network is also included, including points of interest, building shapes, and political boundaries. This is shown schematically in the adjacent image. Geographic Data Files (GDF)[1] is a standardized description of such a model.) 
 
-R TREE - 
+- R TREE - 
 
 In range searching, the input is a search rectangle (Query box). Searching is quite similar to searching in a B+ tree. The search starts from the root node of the tree. Every internal node contains a set of rectangles and pointers to the corresponding child node and every leaf node contains the rectangles of spatial objects (the pointer to some spatial object can be there). For every rectangle in a node, it has to be decided if it overlaps the search rectangle or not. If yes, the corresponding child node has to be searched also. Searching is done like this in a recursive manner until all overlapping nodes have been traversed. When a leaf node is reached, the contained bounding boxes (rectangles) are tested against the search rectangle and their objects (if there are any) are put into the result set if they lie within the search rectangle. 
 
@@ -160,6 +160,12 @@ Let’s say we are google so what will we do – I'd say get the data (images) f
 
 It acquires data from TeleAtlas and has partnered with various governments .  
 
+STRIP PROCESSING :
+
+The strip processing of satellite imagery is based on the fact that during one pass, the image data stream forms one single very long image. The geometry of this extended image can be rectified with as few control points as for only one scene if orbital constraints and attitude measurements are properly taken into consideration. This is an extension of the single scene adjustment Determination of overlap of imagery joins is made automatic using the image co-ordinates . As the images of one strip have been registered continuously, they coordinate of any point common to two images is the same. Identifying common points of two images and
+measuring their x coordinates in each of the two image coordinate systems allows the calculation of the overlap. 
+
+
 Now using data from TMC (Traffic message Channel)  we are going to take out attributes such are roads /paths .(remember a smartphone is just a sensor for google relaying data so that it can say where there is a jam , where there is a clear road ) . 
 
 Now these attributes of Roads/Paths are stored with image data in the GDF . 
@@ -177,7 +183,7 @@ Now these attributes of Roads/Paths are stored with image data in the GDF .
 
 - Will you be able to reroute quickly if the user takes a different turn? 
 
-BRIEF EXPLANATION -  
+- BRIEF EXPLANATION -  
 
 Google Maps uses A* algorithm for finding the shortest path and alternates routes in real time. A* algorithm is an advanced form of Breadth first search . It avoids costly path and choose the most promising path . It is a very smart algorithm. It is used approximate the shortest path in real-life situations, like- in maps, games where there can be many hindrances. It is formulated in terms of weighted graphs in case of google map this weight is travel time. Starting from a specific node(source node) of a graph, it constructs a tree of paths starting from that node, expanding paths one step at a time, until one of its paths ends at the predetermined destination node. 
 
@@ -233,7 +239,7 @@ f(n)=g(n)+h(n)
 
 where n is the destination node on the path, g(n) is the cost of the path from the start node to n, and h(n) is a heuristic that estimates the shortest path from source to the destination. The heuristic is problem-specific. In this case it is time taken to reach somewhere. 
 
-Bi-directional. This is a somewhat more effective optimization and almost all route calculation algorithms in the industry use it but not primarily for the performance advantage it brings. It means that the route is computed both forward from the origin (with Dijkstra, A*, reach-based routing, highway hierarchies, contraction hierarchies, or other methods) and backward from the destination. Like A*, the technique reduces the area searched, but more importantly, some more important algorithms (ones using road hierarchies) require it to work. But bi-directional route computations bring their own complications – the algorithm must determine when the two searches have met at a point on an optimum or near optimum route and that’s more complex than it sounds. 
+- Bi-directional. This is a somewhat more effective optimization and almost all route calculation algorithms in the industry use it but not primarily for the performance advantage it brings. It means that the route is computed both forward from the origin (with Dijkstra, A*, reach-based routing, highway hierarchies, contraction hierarchies, or other methods) and backward from the destination. Like A*, the technique reduces the area searched, but more importantly, some more important algorithms (ones using road hierarchies) require it to work. But bi-directional route computations bring their own complications – the algorithm must determine when the two searches have met at a point on an optimum or near optimum route and that’s more complex than it sounds. 
 
 Without any heuristic I believe shortest distance problem is basically plain dijkstra algorithm and computation time would be O(V^2) 
 
