--- a/b19138.md
+++ b/b19138.md
@@ -12,13 +12,13 @@ There is a lot more going on in the back of just plotting our coordinates on a p
 * So, one might want to optimize the cost of the route, this might seem a bit easy but it involves many complex calculations like,
   - Collecting and using traffic data so that slow roads are less likely to be chosen in the route calculation.
   - If a route with a few turns is only slightly longer than a route with many turns, it is likely to be a better choice for the driver.
-*Intersections are also complex as not every turn is valid.
+* Intersections are also complex as not every turn is valid.
 * Determine if the user has lost the previous track and now want a new path for the same destination is also a complex problem that requires A* algorithm to solve. 
 *  Differences between states and countries that follow different rules for traffic control.
 * What if the navigation device (e.g. cell phone) can only hold map data for nearby areas but the driver is on a long trip that sometimes travels out of the cell network.
 
 ## Computing Quickest/Shortest Path
-* One of the most efficient solutions for the shortest path is Dijkstra Algorithm which is a greedy algorithm which means it tells us the shortest path without analyzing the complete path, meaning if there are 2 ways that lead to a particular turn, then the shorter one is chosen independent of the fact, what comes next. 
+* One of the most efficient solutions for the shortest path is **Dijkstra Algorithm** which is a greedy algorithm  and also a single pair shortest path algorithm which means it tells us the shortest path without analyzing the complete path, meaning if there are 2 ways that lead to a particular turn, then the shorter one is chosen independent of the fact, what comes next. But an all pair shortest algorithm can be more usefull like **Flyod Warshall** which is also best suited for Dense graph as the graph of the world is obviously going to be dense. For sparse graph like in hilly areas of the world we can also use **Johnson’s Algorithm** as it is well suited for this.
 * Commenting on time without using heuristic is a difficult job, but this can be easily said as the data is stored in different types of binary trees, increasing number of nodes will affect a lot on the performance of the maps, that might even be an exponential increase in time complexity in the worst case and even constant in best case scenario.
 * Nearest neighbor is a great algorithm which works fine in finding the shortest path, it gives us the optimal solution most of the time, but nothing is perfect right. So on average, it shows us 25% longer path then the shortest path also sometimes it shows us the worst result.
 * Using precomputed information or inherent information contained in the data can improve the quality of results and also can minimize the time. 
