--- a/b19138.md
+++ b/b19138.md
@@ -6,7 +6,8 @@ The logic is simple, a satellite which clicks photos of the whole world frequent
 ## Stored Data
 While first let's talk about a single user trying to get to a particular location, first we have to make sure that the images we have produced are accurate if that isn't true how one is supposed to get to a location, then here comes the hard part, obtaining the live coordinates of the user and plot them, we can't plot the coordinates on an image as the computer doesn't understand those images, so here we must use a specified data structures which can store the information of roads, building houses, etc. 
 * There are data structures which can perform these task and one of them is R* tree which is feasible for storing maps-like data, i.e. buildings, schools, houses, etc. and GPS coordinates are stored using a KD tree. 
-* Well the images for everyone are common but we have to use different KD trees to store the data of an individual which is going to cost  us TB's of data if we are talking about millions of users and the image alone is going to take TB's of data to store. Storing data is nowadays not a problem. You can store TB's of data by investing a sufficient amount of money in it, or one can buy cloud data storage easily.
+* Well the images for everyone are common but we have to use different KD trees to store the data of an individual which is going to cost  us TB's of data if we are talking about millions of users and the image alone is going to take TB's of data to store. NoSQL is the best way to store this type of data as it is unstructured and will be stored efficiently in NoSQL. 
+* Example is suppose I want to store my location in the Data Base then my name i.e. Sagar's house is stored as 2 attributes Lattitude and Longtitude as a key- value pair in a dictionary.
 ## Preprocessing
 There is a lot more going on in the back of just plotting our coordinates on a preprocessed graph. Here is what...
 * So, one might want to optimize the cost of the route, this might seem a bit easy but it involves many complex calculations like,
