--- a/b19042.md
+++ b/b19042.md
@@ -194,7 +194,7 @@ _**SOS FEATURES!**_
 **additional resources:**
 
 [visual run of various algorithms](https://www.youtube.com/watch?v=DINCL5cd_w0"youtube"), [application](https://qiao.github.io/PathFinding.js/visual/)  
-[bidirectional,A* algos and results](https://drive.google.com/drive/u/0/folders/17JvyKEaKQzl3txH4oktd2dtms_TiLv74"princeton.edu")  
+[bidirectional,A* algos and results](https://drive.google.com/file/d/1JHkuIW_zDAZ-SYEMh05Y7UoJ1zIIf6dB/view?usp=sharing)  
 
 ## Implementation
 
