added my design

--- a/b18074.md
+++ b/b18074.md
@@ -27,7 +27,7 @@ Google maps are an excellent example of organising scattered world data and usin
 
  ## Hey I have designed keeping in mind ->  "We call all the inquisitive minds to this design competition where you have to come up with a design document explaining how Google Maps work. Google Maps works on a proprietary algorithm. Your task is to come up with a detailed document with, whatever you think, happens behind the scenes when you use the application ."  
 
- # It means it's more than calculating shortest route problem :) .
+ ##  It means it's more than calculating shortest route problem :) .
  
 
 Lets dive into my design logic . 
@@ -37,12 +37,44 @@ Lets dive into my design logic .
 
 1. We need to capture loads and loads of spatial data with most crisp image like the image u see when u have max zoom over a place and u are able to spot a chair / tree / person . 
 
-2. Lets store the data using appropriate data structures and format . 
+2. I am going to call each layer a zoom level which will seperately have all its database organised in a format i'll explain below and this will be discrete for all layers .
 
-3. Relay the information to the user using OFFLINE CACHING IN MEMORY / CLOUD PROCESSING when he/she wanna search a place /reach a place .  
+Ex :  Zoom 0 : U see continents mainly (images , names of continents and some countries , their coordinates based map representation , terrain features)
+      Zoom 1 : Now u see mainly countries and sometime their capitals too ( u know what i mean .)
+      Zoom 2 : Now states geographical data .
 
-## warning : Basically we need to capture the entire earth 'n' no of times and Flattening the earth and still being accurate and not a DJIKSTRA's Algorithm .
+
+3. Lets store the data using appropriate data structures and format . 
+
+## * We really can't store the data in the heirarchy of COUNTRIES -> STATES -> CITIES -> ROADS , PATHWAYS , TRACKS , PARKS because then u literally need to overlap Coordinates , with places why do that ?
+
+## Basically we need to use a heirarchy of coordinates as keys with values having names of Places .
+ex:
+
+                        (67 N 54 E => State )                                                                              
+                                   |
+                                   |
+(67.1 N 54.1 E => City a), (67.2 N 54.2 E => City b), (67.3 N 54.3 E => City c), 
+          |
+          |
+(67.11 N 54.11 E => street a),(67.12 N 54.12 E => street b),(67.12 N 54.12 E => street c)
+. 
+.
+.
+So on 
+
+
+
+-Now this heirarchy needs to be followed at every zoom level
+
+This way we will be having a fool proof mapping system , u see we will be able to find nearest neighbors and everything far too easily using an R Tree this way
+
+4. Relay the information to the user using OFFLINE CACHING IN MEMORY / CLOUD PROCESSING when he/she wanna search a place /reach a place .  
+
+- warning : Basically we need to capture the entire earth 'n' no of times and Flattening the earth and still being accurate and not a DJIKSTRA's Algorithm .
 where 'n' is the no of zoom levels and all the data captured then needs to sorted via data structure(R* Tree), with root being in the layer where ZOOM Level=0 , 
+
+-Here our aim is to REPLICATE AS MANY SERVICES OF GOOGLE MAPS AS POSSIBLE .
  
  
 
