added my design

--- a/b18074.md
+++ b/b18074.md
@@ -39,25 +39,28 @@ Lets dive into my design logic .
 
 2. I am going to call each layer a zoom level which will seperately have all its database organised in a format i'll explain below and this will be discrete for all layers .
 
-Ex :  Zoom 0 : U see continents mainly (images , names of continents and some countries , their coordinates based map representation , terrain features)
-      Zoom 1 : Now u see mainly countries and sometime their capitals too ( u know what i mean .)
-      Zoom 2 : Now states geographical data .
+Ex : 
+- Zoom 0 : U see continents mainly (images , names of continents and some countries , their coordinates based map representation , terrain features)
+- Zoom 1 : Now u see mainly countries and sometime their capitals too ( u know what i mean .)
+- Zoom 2 : Now states geographical data .
 
 
 3. Lets store the data using appropriate data structures and format . 
 
-## * We really can't store the data in the heirarchy of COUNTRIES -> STATES -> CITIES -> ROADS , PATHWAYS , TRACKS , PARKS because then u literally need to overlap Coordinates , with places why do that ?
+* We really can't store the data in the heirarchy of COUNTRIES -> STATES -> CITIES -> ROADS , PATHWAYS , TRACKS , PARKS because then u literally need to overlap Coordinates , with places why do that ?*
 
-## Basically we need to use a heirarchy of coordinates as keys with values having names of Places .
+** Basically we need to use a heirarchy of coordinates as keys with values having names of Places **
 ex:
 
-                        (67 N 54 E => State )                                                                              
+-                        (67 N 54 E => State ) 
+
                                    |
-                                   |
-(67.1 N 54.1 E => City a), (67.2 N 54.2 E => City b), (67.3 N 54.3 E => City c), 
+                                   
+- (67.1 N 54.1 E => City a), (67.2 N 54.2 E => City b), (67.3 N 54.3 E => City c), 
+
           |
-          |
-(67.11 N 54.11 E => street a),(67.12 N 54.12 E => street b),(67.12 N 54.12 E => street c)
+          
+- (67.11 N 54.11 E => street a),(67.12 N 54.12 E => street b),(67.12 N 54.12 E => street c)
 . 
 .
 .
