added my design

--- a/b18074.md
+++ b/b18074.md
@@ -47,20 +47,20 @@ Ex :
 
 3. Lets store the data using appropriate data structures and format . 
 
-* We really can't store the data in the heirarchy of COUNTRIES -> STATES -> CITIES -> ROADS , PATHWAYS , TRACKS , PARKS because then u literally need to overlap Coordinates , with places why do that ?*
+~~We really can't store the data in the heirarchy of COUNTRIES -> STATES -> CITIES -> ROADS , PATHWAYS , TRACKS , PARKS because then u literally need to overlap Coordinates , with places why do that~~ ?
 
-** Basically we need to use a heirarchy of coordinates as keys with values having names of Places **
+**Basically we need to use a heirarchy of coordinates as keys with values having names of Places**
 ex:
 
 -                        (67 N 54 E => State ) 
 
                                    |
                                    
-- (67.1 N 54.1 E => City a), (67.2 N 54.2 E => City b), (67.3 N 54.3 E => City c), 
+ (67.1 N 54.1 E => City a), (67.2 N 54.2 E => City b), (67.3 N 54.3 E => City c), 
 
           |
           
-- (67.11 N 54.11 E => street a),(67.12 N 54.12 E => street b),(67.12 N 54.12 E => street c)
+ (67.11 N 54.11 E => street a),(67.12 N 54.12 E => street b),(67.12 N 54.12 E => street c)
 . 
 .
 .
@@ -74,10 +74,10 @@ This way we will be having a fool proof mapping system , u see we will be able t
 
 4. Relay the information to the user using OFFLINE CACHING IN MEMORY / CLOUD PROCESSING when he/she wanna search a place /reach a place .  
 
-- warning : Basically we need to capture the entire earth 'n' no of times and Flattening the earth and still being accurate and not a DJIKSTRA's Algorithm .
-where 'n' is the no of zoom levels and all the data captured then needs to sorted via data structure(R* Tree), with root being in the layer where ZOOM Level=0 , 
+- **warning : Basically we need to capture the entire earth 'n' no of times and Flattening the earth and still being accurate and not a DJIKSTRA's Algorithm**
+**where 'n' is the no of zoom levels and all the data captured then needs to sorted via data structure(R* Tree), with root being in the layer where ZOOM Level=0** 
 
--Here our aim is to REPLICATE AS MANY SERVICES OF GOOGLE MAPS AS POSSIBLE .
+*Here our aim is to REPLICATE AS MANY SERVICES OF GOOGLE MAPS AS POSSIBLE* .
  
  
 
@@ -91,24 +91,24 @@ Zoom level , Google Tile coordinate , World Coordinate , Pixel Coordinate .
 
 Eg: 
 
-Chicago, IL 
-Lat/Lng: (41.85, -87.65) 
-Zoom level: 3 
-World Coordinate: (65.67111111111112, 95.17492654697409) 
-Pixel Coordinate: (525, 761) 
-Tile Coordinate: (2, 2) 
+- Chicago, IL 
+- Lat/Lng: (41.85, -87.65) 
+- Zoom level: 3 
+- World Coordinate: (65.67111111111112, 95.17492654697409) 
+- Pixel Coordinate: (525, 761) 
+- Tile Coordinate: (2, 2) 
 
-- ZOOM LEVEL-  how much we wanna zoom into the map . 
+- *ZOOM LEVEL*-  how much we wanna zoom into the map . 
 
-- WORLD COORDINATE- the exact coordinate of a place using Mercator projection .    
+- *WORLD COORDINATE*- the exact coordinate of a place using Mercator projection .    
 
-- GOOGLE TILE COORDINATE –Google has divided the map into zones / tiles (16 of them ) and u need a tile coordinate to access images of that place . 
+- *GOOGLE TILE COORDINATE* –Google has divided the map into zones / tiles (16 of them ) and u need a tile coordinate to access images of that place . 
 
 <img src="b18074/tileCoordinates.png" width=400 height=400>   
 
-- PIXEL COORDINATE- Pixel coordinates reference a specific pixel on the map at a specific zoom level, whereas world coordinates reflect absolute locations on a given projection. Pixel coordinates are calculated using the following formula: 
+- *PIXEL COORDINATE*- Pixel coordinates reference a specific pixel on the map at a specific zoom level, whereas world coordinates reflect absolute locations on a given projection. Pixel coordinates are calculated using the following formula: 
 
-// pixelCoordinate = worldCoordinate * 2^zoomLevel . 
+// **pixelCoordinate = worldCoordinate * 2^zoomLevel** . 
 
 LET’s STORE THIS DATA . 
 
@@ -134,7 +134,7 @@ Removing 70% water and other non-interesting area, we are left with 10% area tha
 
  
 
-*WE ALSO NEED TO STORE THE ZOOM LEVELS AND HAVE IMAGES STORED FOR THAT ZOOM LEVEL , CAN'T ALWAYS RELY ON IMAGE PROCESSING ALGO FOR REALTIME EFFICIENCY . 
+*WE ALSO NEED TO STORE THE ZOOM LEVELS AND HAVE IMAGES STORED FOR THAT ZOOM LEVEL , CAN'T ALWAYS RELY ON IMAGE PROCESSING ALGO FOR REALTIME EFFICIENCY* . 
 
 Let's have a Zoom level of 2 (assume)  and move outwards .
 
@@ -156,13 +156,13 @@ Lets go forward with 2000 PB now  and say they are storing this data on around 1
 
 DATA STRUCTURE TO USE-  We need to use R* Tree to store  "GDF"  
 
-- (Geographic Data Files : 
+- **Geographic Data Files** : 
 
 Maps are stored as graphs, or two dimensional arrays of objects with attributes of location and category, where some common categories include parks, roads, cities, and the like. 
 
-A map database represents a road network along with associated features. Map providers can choose various models of a road network as a basis to formulate a database. Commonly, such a model comprises basic elements (nodes, links and areas) of the road network and properties of those elements (location coordinates, shape, addresses, road class, speed range, etc.). The basic elements are referred to as features and the properties as attributes. Other information associated with the road network is also included, including points of interest, building shapes, and political boundaries. This is shown schematically in the adjacent image. Geographic Data Files (GDF) is a standardized description of such a model.) 
+A map database represents a road network along with associated features. Map providers can choose various models of a road network as a basis to formulate a database. Commonly, such a model comprises basic elements (nodes, links and areas) of the road network and properties of those elements (location coordinates, shape, addresses, road class, speed range, etc.). The basic elements are referred to as features and the properties as attributes. Other information associated with the road network is also included, including points of interest, building shapes, and political boundaries. This is shown schematically in the adjacent image. Geographic Data Files (GDF) is a standardized description of such a model.
 
-- R TREE - 
+- **R TREE** - 
 
 In range searching, the input is a search rectangle (Query box). Searching is quite similar to searching in a B+ tree. The search starts from the root node of the tree. Every internal node contains a set of rectangles and pointers to the corresponding child node and every leaf node contains the rectangles of spatial objects (the pointer to some spatial object can be there). For every rectangle in a node, it has to be decided if it overlaps the search rectangle or not. If yes, the corresponding child node has to be searched also. Searching is done like this in a recursive manner until all overlapping nodes have been traversed. When a leaf node is reached, the contained bounding boxes (rectangles) are tested against the search rectangle and their objects (if there are any) are put into the result set if they lie within the search rectangle. 
 
@@ -177,13 +177,13 @@ For priority search such as nearest neighbor search, the query consists of a poi
 
 Suppose we need to find place around a point of interest then: 
 
-A QUADTREE is a data structure that's useful for finding points near a single point, by searching inside an area surrounding the point of interest. 
+*A QUADTREE is a data structure that's useful for finding points near a single point, by searching inside an area surrounding the point of interest*. 
 
 ## Important - we can't use a normal mysql database Why ?
 
 Just think for yourself , using so much world data and using joins would be cumbersome hence we need DISTRIBUTED CLOUD SYSTEMS .
 
-YUP that's why Google invented Google cloud database named -------------BigTable-------------
+**YUP that's why Google invented Google cloud database named -------------BigTable-------------**
 
 The main advantages are: - Join operations are less costly because of the denormalization - Replication/distribution of data is less costly because of data independence (ie, if you want to distribute data across two nodes, you probably won't have the problem of having an entity in one node and other related entity in another node because similar data is grouped) :)  .
 
@@ -208,7 +208,7 @@ Radiometric calibration can be absolute where radiometric values are converted t
 
 <img src="b18074/correction.gif" width=400 height=400>
 
-Other Preprocessing includes noise reduction , balancing illumination , sharpness of satellite images .
+*Other Preprocessing includes noise reduction , balancing illumination , sharpness of satellite images .*
 
 - STRIP PROCESSING :
 
@@ -218,9 +218,9 @@ measuring their x coordinates in each of the two image coordinate systems allows
 
 Now using data from TMC (Traffic message Channel)  we are going to take out attributes such are roads /paths .(remember a smartphone is just a sensor for google relaying data so that it can say where there is a jam , where there is a clear road ) . 
 
-## REMINDER - A man used TMC from 100 phones to show a jam :) .
+**REMINDER - A man used TMC from 100 phones to show a jam :)**
 
-Now these attributes of Roads/Paths are stored with image data in the GDF . 
+*Now these attributes of Roads/Paths are stored with image data in the GDF* . 
 
  
  
@@ -230,11 +230,11 @@ Now these attributes of Roads/Paths are stored with image data in the GDF .
 
 - BRIEF EXPLANATION -  
 
-Google Maps uses A* algorithm for finding the shortest path and alternates routes in real time. A* algorithm is an advanced form of Breadth first search . It avoids costly path and choose the most promising path . It is a very smart algorithm. It is used approximate the shortest path in real-life situations, like- in maps, games where there can be many hindrances. It is formulated in terms of weighted graphs in case of google map this weight is travel time. Starting from a specific node(source node) of a graph, it constructs a tree of paths starting from that node, expanding paths one step at a time, until one of its paths ends at the predetermined destination node. 
+Google Maps uses <h3 A* algorithm > for finding the shortest path and alternates routes in real time. A* algorithm is an advanced form of Breadth first search . It avoids costly path and choose the most promising path . It is a very smart algorithm. It is used approximate the shortest path in real-life situations, like- in maps, games where there can be many hindrances. It is formulated in terms of weighted graphs in case of google map this weight is travel time. Starting from a specific node(source node) of a graph, it constructs a tree of paths starting from that node, expanding paths one step at a time, until one of its paths ends at the predetermined destination node. 
 
 At each iteration of its main loop, A* needs to determine which of its partial paths to expand into one or more longer paths. It does so based on an estimate of the cost (total time taken) still to go to the goal node. Specifically, A* selects the path that minimize. 
 
-f(n)=g(n)+h(n) 
+**f(n)=g(n)+h(n)**
 
  <img src="b18074/Astar.png" width=800 height=800> 
 
@@ -282,20 +282,19 @@ f(n)=g(n)+h(n)
 
  
 
-where n is the destination node on the path, g(n) is the cost of the path from the start node to n, and h(n) is a heuristic that estimates the shortest path from source to the destination. The heuristic is problem-specific. In this case it is time taken to reach somewhere. 
+*where n is the destination node on the path, g(n) is the cost of the path from the start node to n, and h(n) is a heuristic that estimates the shortest path from source to the destination. The heuristic is problem-specific. In this case it is time taken to reach somewhere.* 
 
 - Bi-directional DJIKSTRA
  This is a somewhat more effective optimization and almost all route calculation algorithms in the industry use it but not primarily for the performance advantage it brings. It means that the route is computed both forward from the origin (with Dijkstra, A*, reach-based routing, highway hierarchies, contraction hierarchies, or other methods) and backward from the destination. Like A*, the technique reduces the area searched, but more importantly, some more important algorithms (ones using road hierarchies) require it to work. But bi-directional route computations bring their own complications – the algorithm must determine when the two searches have met at a point on an optimum or near optimum route and that’s more complex than it sounds. 
 
 <img src="b18074/comp.jpg" width=800 height=500> 
 
-- Without any heuristic I believe shortest distance problem is basically plain dijkstra algorithm and computation time would be O(V^2) 
+## Without any heuristic I believe shortest distance problem is basically plain dijkstra algorithm and computation time would be O(V^2) 
+ 
 
-I have given an example of various heuristics being used in Astar algorithm (basically I don’t know  Arc flags 😊). 
+**Other Heuristics can be FUEL SAVINGS , TURNS , INTERSECTIONS ,SPEED , NO OF ROAD LANES , HIGHWAY OR NOT etc , TRAFFIC DENSITY .** 
 
-Other Heuristics can be FUEL SAVINGS , TURNS , INTERSECTIONS ,SPEED , NO OF ROAD LANES , HIGHWAY OR NOT etc . 
-
-With Heuristics Accuracy will increase as seen below and maybe time also decrease because now we can straight away cancel a route if it violates heuristic and we need not traverse on that route , just see Djikstra below how many points it is traversing so I believe it is subjective and based on our model . 
+With Heuristics Accuracy will increase as seen below and maybe time also decrease because now we can straight away cancel a route if it violates heuristic and we need not traverse on that route , just see Djikstra below how many points it is traversing for our model so I believe it is subjective and based on our model . 
 
  
  <img src="b18074/map.jpg" width=800 height=1100> 
@@ -309,6 +308,7 @@ Basically ASTAR is built keeping in mind such scenarios .
 
 ## Efficiency and Feasibility 
 
+
 - RENDERING MAP ON PHONES :
 The technology could generically be described as a map server. The map server generates a map for the requested location from a large set of pre-generated map tile images covering the entire planet. The map server may overlay data from other databases on top of this. The combination of a map viewer client and geographical database is traditionally called a Geographical Information System (GIS).
 As stated, Google generated all of these 256x256 tiles and is just serving the relevant tiles.
@@ -317,11 +317,11 @@ Google Maps and Google Earth use something known as KML, or "Keyhole Markup Lang
 
  
 
-Theoretically , it should perform as expected until our heuristics aren’t haphazard and illogical 😊 . 
+*Theoretically , it should perform as expected until our heuristics aren’t haphazard and illogical 😊 .* 
 
  
 
-Yup it can work on the scale of globe u see we already have collected data , mined their attributes , stored the data , and as the algorithms are excellent it means it will work everywhere . 
+**Yup it can work on the scale of globe u see we already have collected data , mined their attributes , stored the data , and as the algorithms are excellent it means it will work everywhere .** 
  
 
 ## References 
@@ -343,7 +343,5 @@ Any concluding remarks?
 
 Well I believe this challenge was quite interesting as basically I have read Google maps system design thanks 😊 . 
  
-
-Throughout the document, `Flowcharts, diagrams and small code-snippets` are highly recommended. Don't blindly copy from blogs. :) 
 
  
