--- a/b19266.md
+++ b/b19266.md
@@ -18,7 +18,7 @@ Maps and other informations are provided by various private firms and government
 
 Maps are stored in the form of Vector Tiles which are small chunks of map. The are woven together and displayed. Since all the roads, landmarks or places can be displayed as lines, curves or some sorts of shapes, real images need not to be stored. This saves a lot of space.
 
-#####-  Native Graph Database Management System is used to store data of surface across the globe.**##### 
+#####-  Native Graph Database Management System is used to store data of surface across the globe.##### 
 It's perhaps the best way to store complex and dynamic relationships in connected data. New routes/roads develop over time, so it will be easy to update the database. Moreover, it will be easy to store information about roads as the properties of edges.
 1. Nodes - Nodes have the location (latitude, longitude) of the place. Roads are either curvy or straight. Curvy roads are divided into ver small parts so that they almost become straight lines. The end points of each straight road are made a node with no label. Other public places are made nodes with labels. 
 	   It has properties in the form of (name/value pairs).
