--- a/b19266.md
+++ b/b19266.md
@@ -18,12 +18,12 @@ Maps and other informations are provided by various private firms and government
 
 Maps are stored in the form of Vector Tiles which are small chunks of map. The are woven together and displayed. Since all the roads, landmarks or places can be displayed as lines, curves or some sorts of shapes, real images need not to be stored. This saves a lot of space.
 
-#####-  Native Graph Database Management System is used to store data of surface across the globe.##### 
+**-  Native Graph Database Management System is used to store data of surface across the globe.**
 It's perhaps the best way to store complex and dynamic relationships in connected data. New routes/roads develop over time, so it will be easy to update the database. Moreover, it will be easy to store information about roads as the properties of edges.
 1. Nodes - Nodes have the location (latitude, longitude) of the place. Roads are either curvy or straight. Curvy roads are divided into ver small parts so that they almost become straight lines. The end points of each straight road are made a node with no label. Other public places are made nodes with labels. 
-	   It has properties in the form of (name/value pairs).
-	   1. Name: Name of the place.
-	   2. Address: Address of the place.
+It has properties in the form of (name/value pairs).
+* Name: Name of the place.
+* Address: Address of the place.
 2. Labels - Labels store the information about places which are helpful in categorizing them. User can easily get results for particular searches (e.g. hospitals, petrol pumps, water body, etc.) on his/her way. For junctions, a label ‘junction’ is added.
 3. Relations - Relations hold the information about the road between two nodes, i.e., Number of Lanes and Quality factor.
 
@@ -47,15 +47,15 @@ Demonstartion (Random):
 3. Lane : Integer.
 4. Quality factor: Decimal.
 
-###- Data for RAILWAY ROUTE/BUS ROUTE is stored in Tables consisting of rows and columns.
+** Data for RAILWAY ROUTE/BUS ROUTE is stored in Tables consisting of rows and columns.**
 
 Columns										 Data Types
-1. Location (Latitude/Longitude) of starting point and destination.		 Set of decimal values.
-2. Time of departure and arrival at stations.					 Time.
-3. Name of train/bus (if any).							 Character.
-4. Train number or bus number (if any).						 Character.
-5. Non-functioning days (if any).						 Character.
-6. Platform number (in case of trains).						 Character.
+1. Location (Latitude/Longitude) of starting point and destination.---		 Set of decimal values.
+2. Time of departure and arrival at stations.---			 	Time.
+3. Name of train/bus (if any).---							 Character.
+4. Train number or bus number (if any).---						 Character.
+5. Non-functioning days (if any).---						 Character.
+6. Platform number (in case of trains).---						 Character.
 
 ## Preprocessing
 For finding the quickest/shortest path, we do not need all the nodes stored. So we need to filter the data stored. All the nodes with label ‘junction’ are chosen between the starting and final locations and also of limited surrounding areas. Weight of the edges is calculated with the help of formula discussed in the next section. If the user wishes to locate any nearest public place, nodes with that label will also be chosen. 
@@ -67,10 +67,12 @@ In some situations, minimum time taking route is preferred while shortest distan
 **For shortest distance:**
 
 The algorithm being used is A* algorithm .
-At every node, we calculate two parameters for all the connected nodes, g and h, where g is the distance between the starting point and the current node and h is the heuristic distance between current node and the final node. 
+At every node, we calculate two parameters for all the connected nodes, g and h, where g is the distance between the starting point and the current node and h is the heuristic distance between current node and the final node.
+
 			f = g+h
 Node with the least value of f is chosen at every step.
 To calculate h, we use euclidean distance since the roads can be leading towards any direction.
+
 		Euclidean distance (h)= ((xf – x)2 + (yf – y)2)1/2
 					where (x , y) – (latitude , longitude) of current node
 						(xf , yf) – (latitude , longitude) of final node
@@ -94,17 +96,17 @@ For each vehicle, a threshold quality factor qo is there, below which the road i
 For taking a turn, vehicles have to accelerate and decelerate which takes time. So for each turn, twice of deceleration time of that vehicle is added.
 	
 		h = (d- u – v - w)/(s*q1) + w/(s*q2) + u*th + v*tm  + n*2*td
-where h is the weight of node
-	d is the distance between nodes
-	u is the distance which has heavy traffic 
-	v is the distance which has moderate traffic
-	w is the distance of clear road which has quality factor q2, , while the remaining clear road has quality factor q1 .
-	n is the number of turns
-	td is the deacceleration time
+where h is the weight of node\
+&nbsp;d is the distance between nodes\
+&nbsp;u is the distance which has heavy traffic\
+&nbsp;v is the distance which has moderate traffic\
+&nbsp;w is the distance of clear road which has quality factor q2, , while the remaining clear road has quality factor q1 .\
+&nbsp;n is the number of turns\
+&nbsp;td is the deacceleration time\
 
 ![Traffic](/b19266/Traffic.png)
 
-![Deceleration](/b19266/Deceleration.jpg)
+![Deceleration](/b19266/Deceleration.png)
 
 Then, Djikstra’s algorithm is applied.
 For moderate and heavy traffic areas, quality factor is not taken into consideration because it does not has much effect.
